fix: button align center icon

--- a/components/button.scss
+++ b/components/button.scss
@@ -96,4 +96,6 @@
 
 .icon {
   margin-right: .5em;
+  display: inline-flex;
+  align-items: center;
 }
